--- a/01-introduction/perdu.css
+++ b/01-introduction/perdu.css
@@ -25,7 +25,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(-45deg, #ff006e, #8338ec, #3a86ff, #06d6a0, #ffbe0b);
+    background: linear-gradient(-45deg, #ff006e, #59ec38, #3a86ff, #06d6a0, #ffbe0b);
     background-size: 400% 400%;       /* plus grand que l'écran pour animer */
     animation: gradientShift 8s ease infinite;
     font-family: 'Comic Sans MS', 'Chalkboard SE', cursive;
